--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,11 +4,8 @@
 
     <item
         android:id="@+id/menu_edit"
-        android:title="Edit" />
-    <item
-        android:id="@+id/menu_done"
-        android:icon="@drawable/ic_done_black_24dp"
-        android:title="done"
+        android:icon="@drawable/ic_edit_black_24dp"
+        android:title="Edit"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_signout"
@@ -19,5 +16,10 @@
         android:id="@+id/menu_back"
         android:icon="@drawable/ic_arrow_back_black_24dp"
         android:title="Back"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_done"
+        android:icon="@drawable/ic_done_black_24dp"
+        android:title="done"
         app:showAsAction="ifRoom" />
 </menu>
