--- a/app/src/main/res/layout/recycler_text.xml
+++ b/app/src/main/res/layout/recycler_text.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+        <import type="android.view.View" />
+        <variable
+            name = "model"
+            type = "com.example.mydiaryapplication.Model"/>
+    </data>
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -34,3 +44,4 @@
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
+    </layout>
