--- a/app/src/main/res/layout/recycler_text.xml
+++ b/app/src/main/res/layout/recycler_text.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="8dp"
+            android:background="@drawable/card_background"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             android:layout_marginStart="12dp"
