--- a/app/src/main/res/layout/recycler_text.xml
+++ b/app/src/main/res/layout/recycler_text.xml
@@ -25,6 +25,12 @@
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp">
 
+            <TextView
+                android:id="@+id/card_color"
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="@color/colorPrimary"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
