--- a/app/src/main/res/menu/menu_list.xml
+++ b/app/src/main/res/menu/menu_list.xml
@@ -2,4 +2,9 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/menu_calendar"
+        android:icon="@drawable/ic_date_range_black_24dp"
+        android:title="menu_calendar"
+        app:showAsAction="always" />
 </menu>
