--- a/app/src/main/res/layout/list_item_calendar.xml
+++ b/app/src/main/res/layout/list_item_calendar.xml
@@ -8,10 +8,21 @@
     android:layout_margin="4dp"
     app:cardCornerRadius="8dp">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
     <TextView
         android:id="@+id/text_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="24sp"/>
+
+        <ImageView
+            android:id="@+id/image_check"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+</LinearLayout>
 </androidx.cardview.widget.CardView>
