--- a/app/src/main/res/menu/menu_detail.xml
+++ b/app/src/main/res/menu/menu_detail.xml
@@ -3,6 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/menu_delete"
+        android:icon="@drawable/ic_delete_black_24dp"
+        android:title="Delete"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/menu_edit"
         android:icon="@drawable/ic_edit_black_24dp"
         android:title="Edit"
