--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorWhite">#FFFFFFFF</color>
     <color name="colorPurple">#e6e6fa</color>
+    <color name="colorDarkPurple">#b0c4de</color>
     <color name="colorSkyblue">#87cefa</color>
     <color name="colorGray">#778899</color>
 </resources>
