--- a/app/src/main/res/layout/list_item_calendar.xml
+++ b/app/src/main/res/layout/list_item_calendar.xml
@@ -1,29 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_day"
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:elevation="12dp"
-    android:layout_margin="4dp"
-    app:cardCornerRadius="8dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <data>
+        <variable
+            name="day"
+            type="com.example.mydiaryapplication.CalendarItem.Day" />
+
+    </data>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_day"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="100dp"
+        android:elevation="12dp"
+        android:layout_margin="4dp"
+        app:cardCornerRadius="8dp">
 
-    <TextView
-        android:id="@+id/text_day"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="24sp"/>
-
-        <ImageView
-            android:id="@+id/image_check"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="12dp"/>
-</LinearLayout>
-</androidx.cardview.widget.CardView>
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/text_day"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{day.day}"
+                android:textSize="24sp"
+                tools:text="day"/>
+
+            <ImageView
+                android:id="@+id/image_check"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="12dp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</layout>
