--- a/app/src/main/res/layout/list_item_calendar_header.xml
+++ b/app/src/main/res/layout/list_item_calendar_header.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:elevation="12dp"
-    android:layout_margin="4dp"
-    app:cardCornerRadius="8dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <TextView
-            android:id="@+id/text_header"
-            android:layout_width="wrap_content"
+        <data>
+                <variable
+                    name="header"
+                    type="com.example.mydiaryapplication.CalendarItem.Header" />
+
+        </data>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textSize="18sp"
-            android:layout_margin="16dp"/>
+            android:orientation="horizontal"
+            android:elevation="12dp"
+            android:layout_margin="4dp"
+            app:cardCornerRadius="8dp">
 
-</androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/text_header"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{header.text}"
+                    android:textSize="18sp"
+                    android:layout_margin="16dp" />
+
+        </androidx.cardview.widget.CardView>
+</layout>
